# vark

./: .gitignore  CMakeLists.txt  README.md  compile_msvc.bat  test.cpp  vark.cpp  vark.h
.github/workflows/: build.yml  release.yml
tests/: shakespeare.vark
